# irmaData

./: .gitignore  Readme.md  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.tours/: james-histogram-maker.tour  make-hdf5-file.tour
grid_jobs/: Readme.md  jobsubmit.sh  runGridJob.sh  setupForGrid.sh
project/: CMakeLists.txt  helpers.cmake  libsForPlugins.cmake  setup.sh
project/src/: CMakeLists.txt  ReconEast.hh  irmaData.fcl  irmaData_module.cc  james_module.cc  james_module.hh  ratio_grid.fcl  ratioeast_module.cc
